Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-28592

FreeBSD build does not include disk plugin

    XMLWordPrintable

Details

    Description

      FreeBSD builds do not contain the disk.so plugin library in the plugins lib directory. If the plugin is being loaded by a .cnf config, this leads to

      2022-05-15 20:40:18 0 [ERROR] mariadbd: Can't open shared library '/usr/local/lib/mysql/plugin/disks.so' (errno: 22, Cannot open "/usr/local/lib/mysql/plugin/disks.so")
      2022-05-15 20:40:18 0 [ERROR] Couldn't load plugins from 'disks.so'.
      

      on each startup

      Attachments

        Activity

          People

            danblack Daniel Black
            hholzgra Hartmut Holzgraefe
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 6.5h
                6.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.