MDEV-28592 disks plugin - getmntinfo (BSD) & getmntent (AIX)

Thanks to references from Brad Smith, BSDs use getmntinfo as
a system call for mounted filesystems.

Most BSDs return statfs structures, (and we use OSX's statfs64),
but NetBSD uses a statvfs structure.

AIX doesn't have either and uses getmntent.